# DF-CustomBlenderAddOn

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  tes.py
agent/: custom_models.py  custom_template.py  ollama.py
blender/: auto_cluster.py
scripts/: run_server.sh  run_test.sh
src/: main.py  secret.py
src/routers/: health_check.py
src/routers/automation/: auto_cluster.py  auto_organize.py  code_generator.py
src/schema/: request_format.py  response.py  validator.py
templates/: prompt.py
tests/api_test/: test_auto_cluster.py  test_cluster_3d_object.py
utils/: error.py  exception.py
