[project]
name = "customblenderplugin"
version = "0.1.0"
description = ""
authors = [
    {name = "Bastian Armananta"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fake-bpy-module (>=20250122,<20250123)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "ruff (>=0.9.2,<0.10.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "pydantic-ai (>=0.0.19,<0.0.20)",
    "langchain-core (>=0.3.31,<0.4.0)",
    "pytz (>=2024.2,<2025.0)",
    "pytest-asyncio (>=0.25.2,<0.26.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "coverage (>=7.6.10,<8.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = ["templates/*.py"]


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning"
]
